# src/main/java/io/swagger/api/WholesaleApi.java
@@ -8,18 +8,10 @@ package io.swagger.api;
 import io.swagger.model.WholesaleAccount;
 import io.swagger.annotations.*;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
-import javax.validation.constraints.*;
+import javax.validation.constraints.NotNull;
 import java.util.List;
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-03-30T18:00:05.067Z")
 
@@ -34,7 +26,6 @@ public interface WholesaleApi {
         method = RequestMethod.POST)
     ResponseEntity<WholesaleAccount> addWholesaleAccount(@ApiParam(value = "Add a new wholesale account to the sale system" ,required=true )  @Valid @RequestBody WholesaleAccount body);
 
-
     @ApiOperation(value = "", nickname = "getWholesaleAccounts", notes = "Get all wholesale accounts", tags={  })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "OK") })
@@ -42,5 +33,14 @@ public interface WholesaleApi {
         produces = { "application/json" }, 
         method = RequestMethod.GET)
     ResponseEntity<List> getWholesaleAccounts();
+
+    @ApiOperation(value = "", nickname = "getRevenueForSalesRep", notes = "Gets total revenue made by a sales rep", tags={  })
+    @ApiResponses(value = {
+            @ApiResponse(code = 200, message = "OK") })
+    @RequestMapping(value = "/revenue/{sales_rep_id}",
+            produces = { "application/json" },
+            method = RequestMethod.GET)
+    ResponseEntity<Double> getRevenueForSalesRep(@NotNull @ApiParam(value = "", required = true) @PathVariable(value = "the sales rep's ID") String sales_rep_id, @NotNull @ApiParam(value = "", required = false) @Valid @RequestParam(value = "date_from", required = false) String dateFrom, @NotNull @ApiParam(value = "", required = false) @Valid @RequestParam(value = "date_to", required = false) String dateTo);
+
 
 }
