# src/main/java/io/swagger/api/WholesaleApiController.java
@@ -1,12 +1,11 @@
 package io.swagger.api;
 
 import io.swagger.model.ConfiguredPrice;
-import io.swagger.model.SalesRep;
 import io.swagger.model.WholesaleAccount;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.annotations.*;
+import io.swagger.model.WholesaleOrder;
 import io.swagger.repository.ConfiguredPriceRepository;
-import io.swagger.repository.SalesRepRepository;
 import io.swagger.repository.WholesaleAccountRepository;
 import io.swagger.repository.WholesaleOrderRepository;
 import org.slf4j.Logger;
@@ -16,13 +15,12 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
 
-import javax.validation.constraints.*;
 import javax.validation.Valid;
 import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
-import java.util.ArrayList;
+import javax.validation.constraints.NotNull;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.List;
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-03-30T18:00:05.067Z")
 
@@ -79,6 +77,20 @@ public class WholesaleApiController implements WholesaleApi {
         List<WholesaleAccount> wholesaleAccounts = wholesaleAccountRepository.findAll();
 
         return new ResponseEntity<List>(wholesaleAccounts, HttpStatus.FOUND);
+    }
+
+    @CrossOrigin
+    public ResponseEntity<Double> getRevenueForSalesRep(@PathVariable(value = "the sales rep's ID") String sales_rep_id,
+                                                        @NotNull @ApiParam(value = "", required = false) @Valid @RequestParam(value = "date_from", required = false) String dateFrom,
+                                                        @NotNull @ApiParam(value = "", required = false) @Valid @RequestParam(value = "date_to", required = false) String dateTo) {
+        List<WholesaleOrder> wholesaleOrders = wholesaleOrderRepository.findBySalesRepEmployeeId(Long.parseLong(sales_rep_id));
+        double revenue = 0.0;
+
+        for(WholesaleOrder order : wholesaleOrders) {
+
+            revenue += order.getTotalPrice();
+        }
+        return null;
     }
 
 }
