# swagger-spec.yaml
@@ -62,6 +62,7 @@ paths:
       responses:
         200:
           description: "OK"
+
   /orders/retail/new:
     post:
       description: "Add a new retail order to the sales system"
@@ -143,6 +144,55 @@ paths:
       responses:
         202:
           description: "Updated"
+
+  /revenue/:
+    get:
+      description: "Gets total revenue made by the organization"
+      operationId: "getTotalRevenue"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "query"
+        name: "date_from"
+        type: "string"
+        required: false
+
+      - in: "query"
+        name: "date_to"
+        type: "string"
+        required: false
+
+      responses:
+        200:
+          description: "OK"
+
+  /revenue/{sales_rep_id}:
+      get:
+        description: "Gets total revenue made by a sales rep"
+        operationId: "getRevenueForSalesRep"
+        produces:
+        - "application/json"
+        parameters:
+        - in: "path"
+          name: "sales_rep_id"
+          required: true
+          schema:
+            type: "string"
+            minimum: 1
+
+        - in: "query"
+          name: "date_from"
+          type: "string"
+          required: false
+
+        - in: "query"
+          name: "date_to"
+          type: "string"
+          required: false
+
+        responses:
+          200:
+            description: "OK"
 definitions:
   RetailOrder:
     type: "object"
